Work on laravel swagger on CRUD of comment and friend
