# app/Http/Controllers/CommentController.php
@@ -32,6 +32,35 @@ class CommentController extends Controller
         return response(['success' => true, 'data' => $comment], 200);
     }
 
+    /**
+     * Store a newly created resource in storage.
+     */
+    /**
+     * @OA\Post(
+     *     path="/api/comment",
+     *     summary="Create a new comment",
+     *     tags={"Comments"},
+     *     @OA\RequestBody(    
+     *         required=true,
+     *         description="Create new comment in a specific post",
+     *         @OA\JsonContent(ref="#/components/schemas/CommentRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Comment created successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/CommentResource")
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Validation error",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *             @OA\Property(property="errors", type="object", example={"description": {"The description field is required."}})
+     *         )
+     *     )
+     * )
+     */
   
     public function store(CommentRequest $request)
     {
@@ -47,9 +76,47 @@ class CommentController extends Controller
         //
     }
 
-    /**
+  /**
      * Update the specified resource in storage.
      */
+
+
+    /**
+     * @OA\Put(
+     *     path="/api/comment/{id}",
+     *     summary="Update a comment",
+     *     tags={"Comments"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the comment to update",
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Input new datas to update",
+     *         @OA\JsonContent(ref="#/components/schemas/CommentRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Comment updated successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/CommentResource")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Comment not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Comment not found")
+     *         )
+     *     )
+     * )
+     */
+
     public function update(Request $request, $id)
     {
         $validatedData = $request->validate([
@@ -61,8 +128,38 @@ class CommentController extends Controller
         return new CommentResource($comment);
     }
 
-    /**
+     /**
      * Remove the specified resource from storage.
+     */
+
+    /**
+     * @OA\Delete(
+     *     path="/api/comment/delete/{id}",
+     *     summary="Delete a comment",
+     *     tags={"Comments"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Insert ID of comment to delete the comment",
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Comment deleted successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Comment not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Comment not found")
+     *         )
+     *     )
+     * )
      */
     public function destroy($id)
     {
